refactoring reservation logic